<resources>
    <string name="app_name">Wishma Plus</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_msg_network_title">Sorry!</string>
    <string name="err_msg_network">Please check your network connection and try again.</string>
    <string name="some_thing_error">Some thing error please try after some time</string>
    <string name="err_empty_field">Field can\'t be empty</string>
    <string name="err_msg_pass">Please Enter Your Password.</string>
    <string name="click_here"><u>Click here</u></string>
    <string name="err_invalid_mobile">Invalid mobile number</string>
    <string name="err_invalid_password">Password must contain at least 8 characters, including an uppercase letter, a lowercase letter, a number, and a special character.</string>
    <string name="err_invalid_first_name">First name must contain only alphabetic characters and be between 2 and 30 characters long.</string>
    <string name="err_invalid_last_name">Last name must contain only alphabetic characters and be between 2 and 30 characters long.</string>
    <string name="err_invalid_email">Please enter a valid email address.</string>
    <string name="err_password_mismatch">Password and Confirm Password do not match.</string>
    <string name="str_ShowOnPermisstionDenied"><![CDATA[To using all functionality of this app, please allow permissions. Go to App Setting -> Permissions enable all permissions.]]></string>
    <string name="replying_to"><![CDATA[Replying to <b>%s</b>]]></string>
    <string name="google_web_client_id">789309115643-j7brbm5rttmun7m2jbshl9p2o5gpc0n5.apps.googleusercontent.com</string>
    <string name="packages">Packages</string>
    <string name="active">Active</string>
    <string name="upgrade">Upgrade</string>
    <string name="package_limit"><![CDATA[<font color=#04A307>%1$d</font>/<font color=#DD061D>%2$d</font>]]></string>
    <string name="package_limit_exceed"><![CDATA[<font color=#DD061D>%1$d</font>/<font color=#DD061D>%2$d</font>]]></string>
    <string name="subscribed">Subscribed</string>
    <string name="free">Free</string>
    <string name="videos">Videos</string>
    <string name="photos">Photos</string>
    <string name="posts">Posts</string>
    <string name="details">Details</string>
    <string name="lives_in"><![CDATA[Lives in <b>%1$s</b>, <b>%2$s</b>]]></string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="current_package">Active Pack</string>
    <string name="edit_public_details">Edit public details</string>
    <string name="add_story">Add Story</string>
    <string name="write_something_here">Write something here...</string>
    <string name="create_story">Create Story</string>
    <string name="loading_please_wait">Loading, Please Wait...</string>
    <string name="reply">Reply</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_note">We are passionate about the empowering individuals to achieve their financial dreams and create a better future for themselves and their families . At our core, we believe in the power of community and collaboration to bring about positive change and growth in the society as well as the world.</string>
    <string name="get_started">GET STARTED</string>
    <string name="video">Video</string>
    <string name="edit_video">Edit Video</string>
    <string name="story">Story</string>
    <string name="create_account">Create Account</string>
    <string name="enter_referral_id_optional">Enter Referral Id (Optional)</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Last name / Surname name \n(with or without middle name)</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="create">CREATE</string>
    <string name="create_new">Create</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="create_post">Create Post</string>
    <string name="daily_limit">Daily Limit</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="enter_username">Enter Mobile No</string>
    <string name="remember_password">Remember Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="forget_pass_note">Please Enter your registered mobile number </string>
    <string name="cancel">Cancel</string>
    <string name="cancel_dot">\u2022 Cancel</string>
    <string name="submit">Submit</string>
    <string name="edit_image">Edit Image</string>
    <string name="edit_details">Edit Details</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_date">Select Date</string>
    <string name="enter_bio">Enter Bio</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="save">SAVE</string>
    <string name="comments">Comments</string>
    <string name="no_comments">No Comments</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy_link">Copy Link</string>
    <string name="report">Report</string>
    <string name="enter_referral_id">Enter Referral Id</string>
    <string name="submit_referral_id">Submit Referral Id</string>
    <string name="skip">Skip</string>
    <string name="post_now">Post Now</string>
    <string name="say_something_about_this">Say something about this...</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="facebook">Wishma Plus</string>
    <string name="messenger">Messenger</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="more">More</string>
    <string name="free_0">Free (0)</string>
    <string name="subscribe_0">Subscribe (0)</string>
    <string name="post_story">Post Story</string>
    <string name="video_is_not_available">Video is not available</string>
    <string name="photo_is_not_available">Photo is not available</string>
    <string name="post_is_not_available">Post is not available</string>
    <string name="reels_not_available">Reels is not available</string>
    <string name="all_features">All Features</string>
    <string name="daily_post_limit">Daily Post Limit</string>
    <string name="you_can_post_text">You can post text</string>
    <string name="you_can_post_image">You can post image</string>
    <string name="you_can_post_video">You can post video</string>
    <string name="you_can_merge_audio_in_video_or_image">You can merge audio in video or image</string>
    <string name="you_can_merge_audio_from_device_and_online_both">You can merge audio from device and online both</string>
    <string name="report_question">Why are you reporting this post?</string>
    <string name="report_note">If someone is in immediate danger, get help before reporting to WishmaPlus. Don\'t wait.</string>
    <string name="current_package_">Active Pack :</string>
    <string name="referral">Referral</string>
    <string name="refer_amp_earn"><![CDATA[Refer & earn]]></string>
    <string name="invite_via_whatsapp">Invite Via WhatsApp</string>
    <string name="invite_via_other">Invite Via Other</string>
    <string name="notification">Notification</string>
    <string name="subscription_packages">Subscription Packages</string>
    <string name="transaction_cancelled_by_user">Transaction cancelled by user</string>
    <string name="my_follower">My Follower</string>
    <string name="level_income">Follower Income</string>
    <string name="term_privacy_note">By continuing, you agree to our Term &amp; Condition and Privacy Policy</string>
    <string name="termandprivacy">Term &amp; Condition and Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">Address</string>
    <string name="email_us">Email Us</string>
    <string name="whatsapp_us">WhatsApp Us</string>
    <string name="call_us">Call Us</string>
    <string name="select_bank">Select Bank</string>
    <string name="enter_branch_name">Enter Branch Name</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="enter_account_name">Enter Account Name</string>
    <string name="enter_ifsc">Enter IFSC</string>
    <string name="income_details">Income Details</string>
    <string name="you_can_view_your_income_details_here">You can view your income details here!</string>
    <string name="income_report">Income Report</string>
    <string name="best_for_you">Which option is best for you?</string>
    <string name="next">Next</string>
    <string name="get_started_with">Get started with a personal profile</string>
    <string name="get_started_with_page">Get started with a Page</string>
    <string name="creative">Get creative by adding a profile picture and name.You can edit this later.</string>
    <string name="get_a_new_name">Get a new name and feed</string>
    <string name="profile_name">Profile Name</string>
    <string name="groups">Groups</string>
    <string name="you_can_view_and_manage_your_groups_here">You can view and manage your groups here!</string>
    <string name="log_out">Log out</string>
    <string name="log_out_from_this_device">Tap to log out from your account</string>
    <string name="public_text">Anyone can see who\'s in the group and what they post. Depending on your group\'s size and age, you might be able to change to private later.</string>
    <string name="private_group_text">Only members can see who\'s in the group and what they post. You might be able to change this group to public later.</string>
    <string name="back">Back</string>
    <string name="information">Information</string>
    <string name="what_you_ll_get_with_a_page">What you\'ll get with a Page</string>
    <string name="access_professional_tools">Access professional tools</string>
    <string name="create_ads_earn_money_with_your_content_if_eligible_and_grow_your_public_presence_with_new_tools">Create ads, earn money with your content (if eligible) and grow your public presence with new tools.</string>
    <string name="get_actionable_insights">Get actionable insights</string>
    <string name="learn_more_about_your_audience_and_how_your_ads_and_other_content_are_performing">Learn more about your audience and how your ads and other content are performing.</string>
    <string name="reach_more_people_and_grow_your_public_presence">Reach more people and grow your public presence</string>
    <string name="setting">Setting</string>
    <string name="success_you_ve_created_rrsdc_now_add_more_details_to_help_people_connect_with_you">Success! You\'ve created Rrsdc. Now add more details to help people connect with you.</string>
    <string name="general">General</string>
    <string name="bio">Bio</string>
    <string name="contact">Contact</string>
    <string name="website">Website(Optional)</string>
    <string name="email">Email(Optional)</string>
    <string name="phone_number">Phone number</string>
    <string name="location">Location</string>
</resources>