<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingUpYourPage">

    <!-- Back Button -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="24dp">

            <!-- Title -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="Finish setting up your Page"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- Subtitle -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/success_you_ve_created_rrsdc_now_add_more_details_to_help_people_connect_with_you"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <!-- Section Title -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/general"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Bio Input -->
            <AutoCompleteTextView
                android:id="@+id/etBio"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_bg_new"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/bio"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray" />

            <!-- Contact Section -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/etWebsite"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_bg_new"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/website"
                android:imeOptions="actionNext"
                android:inputType="textUri"
                android:maxLines="1"
                android:padding="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray" />

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_bg_new"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray" />

            <AutoCompleteTextView
                android:id="@+id/etPhone"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_bg_new"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray" />

            <!-- Location Section -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/etAddress"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_bg_new"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/address"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:maxLines="1"
                android:padding="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@android:color/darker_gray" />

        </LinearLayout>
    </ScrollView>

    <!-- Next Button -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/text_button_border"
        android:gravity="center"
        android:padding="@dimen/_12sdp"
        android:text="@string/next"
        android:textColor="@color/color_white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
