<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signupS"
    tools:context=".Activity.SignUpActivity"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <ImageView
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:src="@drawable/app_logo" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary" />






        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_referral"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_referral_id_optional"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
            android:hint="@string/enter_first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_LastName"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
            android:hint="@string/enter_last_name"
            android:imeOptions="actionNext"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_mobile"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:digits="0123456789+"
            android:hint="@string/enter_mobile_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_email_id"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_confirmP"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/enter_confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="@dimen/_14sdp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/create"
            android:textColor="@android:color/white"
            app:cornerRadius="@dimen/_40sdp"
            app:strokeColor="@color/colorPrimary_alpha25"
            app:strokeWidth="@dimen/_1sdp" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/grey_4"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_login"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:text="@string/click_here"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>