<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_referral_id"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_input"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_referral_id"
        android:padding="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:backgroundTint="@color/grey_3"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/_10sdp"
        android:text="@string/skip"
        android:minWidth="@dimen/_80sdp"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@id/bt_submit"
        app:layout_constraintEnd_toStartOf="@id/bt_submit"
        app:layout_constraintTop_toTopOf="@id/bt_submit"
        app:strokeColor="@color/colorPrimary_alpha25"
        app:strokeWidth="@dimen/_1sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_submit"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="sans-serif-medium"
        android:padding="@dimen/_10sdp"
        android:minWidth="@dimen/_80sdp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        app:cornerRadius="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_input"
        app:strokeColor="@color/colorPrimary_alpha25"
        app:strokeWidth="@dimen/_1sdp" />


</androidx.constraintlayout.widget.ConstraintLayout>
